RESOLVED FIXED163667
Wrong blur radius for filter: drop-shadow()
https://bugs.webkit.org/show_bug.cgi?id=163667
Summary Wrong blur radius for filter: drop-shadow()
Simon Fraser (smfr)
Reported 2016-10-19 09:53:00 PDT
Created attachment 292075 [details] Testcase The blur radius for filter: drop-shadow() should match SVG's feGaussianBlur stdDeviation, which is different from box-shadow. We get this wrong. More info at https://dbaron.org/log/20110225-blur-radius
Attachments
Testcase (1.24 KB, text/html)
2016-10-19 09:53 PDT, Simon Fraser (smfr)
no flags
Patch (6.38 KB, patch)
2016-10-27 22:40 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-10-19 09:54:42 PDT
And the radius changes when you drop into compositing :(
Simon Fraser (smfr)
Comment 2 2016-10-27 21:47:37 PDT
So it turns out that feDropShadow is wrong; it's passing the stdDev directly to ShadowBlur as "blur radius", which is intended for the box-shadow use case.
Simon Fraser (smfr)
Comment 3 2016-10-27 22:40:16 PDT
WebKit Commit Bot
Comment 4 2016-10-28 11:37:10 PDT
Comment on attachment 293117 [details] Patch Clearing flags on attachment: 293117 Committed r208058: <http://trac.webkit.org/changeset/208058>
WebKit Commit Bot
Comment 5 2016-10-28 11:37:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.